--- a/css/main.css
+++ b/css/main.css
@@ -92,6 +92,7 @@ img {
   border-bottom: 1px solid #ececec;
 }
 
+/**********mob-menu***********/
 .open-menu-btn {
   margin-top: 10px;
   margin-bottom: 10px;
@@ -117,12 +118,12 @@ img {
 }
 
 .open-menu-btn__icon {
-  fill: c #000000;
+  fill: currentColor;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.open-menu:hover .open-menu-btn__icon,
-.open-menu:focus .open-menu-btn__icon {
+.open-menu-btn:hover .open-menu-btn__icon,
+.open-menu-btn:focus .open-menu-btn__icon {
   fill: var(--accent-color);
 }
 
@@ -151,7 +152,7 @@ img {
 }
 
 .mob-menu__container {
-  padding-left: 33px;
+  padding-left: 40px;
 }
 
 .close-menu-btn {
@@ -248,15 +249,15 @@ img {
   }
 }
 
+/***************tab and desktop header************/
 .logo {
   font-family: Raleway;
   font-weight: 700;
-  font-size: 26px;
+  font-size: 24px;
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--second-logo-text-color);
   margin-right: 93px;
-  outline: none;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -265,14 +266,26 @@ img {
   color: var(--accent-color);
 }
 
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+  }
+}
+
 .logo--static {
   font-family: Raleway;
   font-weight: 700;
-  font-size: 26px;
+  font-size: 24px;
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--first-logo-text-color);
   margin-right: 0;
+}
+
+@media screen and (min-width: 1200px) {
+  .logo--static {
+    font-size: 26px;
+  }
 }
 
 .navigation__link {
@@ -304,27 +317,18 @@ img {
   color: var(--accent-color);
 }
 
-.navigation__item:not(:last-child) {
-  margin-right: 50px;
-}
-
 @media screen and (max-width: 767px) {
   .navigation__link {
     display: none;
   }
 }
 
+.navigation__item:not(:last-child) {
+  margin-right: 50px;
+}
+
 .contacts__link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
   color: var(--header-address-color);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -339,9 +343,44 @@ img {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .contacts__link {
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.02em;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts__link {
+    font-size: 14px;
+    line-height: 1.14;
+  }
+}
+
 .contacts__icon {
-  margin-right: 10px;
   fill: currentColor;
+}
+
+@media screen and (max-width: 1199px) {
+  .contacts__icon {
+    margin-right: 8px;
+    width: 14px;
+    height: 10px;
+  }
+  .contacts__icon.contacts__icon--tel {
+    width: 10px;
+    height: 14px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts__icon {
+    margin-right: 10px;
+  }
 }
 
 .contacts__item {
@@ -353,8 +392,22 @@ img {
   align-items: center;
 }
 
-.contacts__item:not(:last-child) {
-  margin-right: 50px;
+@media screen and (max-width: 767px) {
+  .contacts__item {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .contacts__item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts__item:not(:last-child) {
+    margin-right: 50px;
+  }
 }
 
 .navigation__menu {
@@ -386,6 +439,18 @@ img {
 @media screen and (max-width: 767px) {
   .contacts {
     display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .contacts {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts {
+    display: flex;
   }
 }
 
@@ -453,7 +518,6 @@ img {
   border-radius: 4px;
   border-color: transparent;
   cursor: pointer;
-  outline: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -742,7 +806,6 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  outline: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -1021,7 +1084,6 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  outline: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -1062,7 +1124,6 @@ img {
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
-  outline: none;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
@@ -1143,7 +1204,6 @@ img {
   border-radius: 4px;
   border-color: transparent;
   padding: 6px 22px;
-  outline: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
