--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,6 +2,8 @@
   border-bottom: 1px solid #ececec;
 }
 
+/**********mob-menu***********/
+
 .open-menu-btn {
   margin-top: 10px;
   margin-bottom: 10px;
@@ -25,10 +27,10 @@
 }
 
 .open-menu-btn__icon {
-  fill: c#000000;
+  fill: currentColor;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  .open-menu:hover &,
-  .open-menu:focus & {
+  .open-menu-btn:hover &,
+  .open-menu-btn:focus & {
     fill: var(--accent-color);
   }
 }
@@ -55,7 +57,7 @@
 }
 
 .mob-menu__container {
-  padding-left: 33px;
+  padding-left: 40px;
 }
 
 .close-menu-btn {
@@ -144,31 +146,38 @@
   }
 }
 
+/***************tab and desktop header************/
+
 .logo {
   font-family: Raleway;
   font-weight: 700;
-  font-size: 26px;
+  font-size: 24px;
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--second-logo-text-color);
   margin-right: 93px;
-  outline: none;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
     color: var(--accent-color);
   }
+  @media screen and (min-width: 1200px) {
+    font-size: 26px;
+  }
 }
 
 .logo--static {
   font-family: Raleway;
   font-weight: 700;
-  font-size: 26px;
+  font-size: 24px;
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--first-logo-text-color);
   margin-right: 0;
+  @media screen and (min-width: 1200px) {
+    font-size: 26px;
+  }
 }
 
 .navigation__link {
@@ -197,30 +206,18 @@
   &:focus {
     color: var(--accent-color);
   }
+
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
 }
 
 .navigation__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.navigation__link {
-  @media screen and (max-width: 767px) {
-    display: none;
-  }
-}
-
 .contacts__link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
   color: var(--header-address-color);
-  display: -webkit-box;
-  display: -ms-flexbox;
-
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
 
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -232,22 +229,60 @@
   @media screen and (max-width: 767px) {
     display: none;
   }
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: center;
+
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.02em;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.14;
+  }
 }
 
 .contacts__icon {
-  margin-right: 10px;
   fill: currentColor;
+
+  @media screen and (max-width: 1199px) {
+    margin-right: 8px;
+    width: 14px;
+    height: 10px;
+    &.contacts__icon--tel {
+      width: 10px;
+      height: 14px;
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    margin-right: 10px;
+  }
 }
 
 .contacts__item {
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  &:not(:last-child) {
-    margin-right: 50px;
+  @media screen and (max-width: 1199px) {
+    &:not(:last-child) {
+      margin-bottom: 10px;
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    &:not(:last-child) {
+      margin-right: 50px;
+    }
   }
 }
 
@@ -275,6 +310,12 @@
   margin-left: auto;
   @media screen and (max-width: 767px) {
     display: none;
+  }
+  @media screen and (min-width: 768px) {
+    display: block;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
   }
 }
 
